# gooselake

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  Makefile  README.md  astro.config.mjs  package.json
.agents/gg/: lead-readme.md  worktree-init.sh
.agents/skills/refactor-large-files/: SKILL.md
.agents/skills/runtime-api-doc-sync/: SKILL.md
.github/workflows/: release.yml
.vercel/: project.json
apps/gooseweb/: buf.gen.yaml  package.json  tsconfig.json  vite.config.ts
apps/gooseweb/lib/: composer-attachments.ts
apps/gooseweb/scripts/: acceptance-contract-smoke.ts  dev-ticket-smoke.ts  p02-chain-consumer.ts  p02-observer-smoke.ts  p03-browser-evidence-smoke.ts  p04-reconnect-lab-smoke.ts  p08-detail-protocol-smoke.ts  p09-command-rejection-repair-smoke.ts  p09-materialized-gap-smoke.ts  p09-production-command-sequence-smoke.ts  p09-session-detail-reload-smoke.ts  p09-static-asset-smoke.ts  p09-worker-store-authority-smoke.ts  proto-smoke.ts  realtime-worker-smoke-authority.ts  realtime-worker-smoke-fixtures.ts  realtime-worker-smoke-heartbeat.ts  realtime-worker-smoke-protocol.ts  realtime-worker-smoke.ts  roster-membership-smoke.ts
crates/goosetower/: Cargo.toml  build.rs
crates/goosetower/examples/: p02_fake_gooselake.rs  p02_observed_goosetower.rs
crates/goosetower/src/: config.rs  lib.rs  main.rs
crates/goosetower/src/auth/: mod.rs
crates/goosetower/src/gateway/: commands.rs  envelopes.rs  gap_repair.rs  mod.rs  observers.rs  socket.rs  support.rs  tests.rs
crates/goosetower/src/gateway/commands/: send_turn.rs
crates/goosetower/src/gateway/tests/: bootstrap_races.rs  gap_repair.rs  healthy_idle.rs  mod.rs  resume.rs  team_commands.rs
crates/goosetower/src/http/: dev_tickets.rs  mod.rs
crates/goosetower/src/materializer/: bootstrap.rs  mod.rs  reducers.rs  snapshots.rs  state.rs  tests.rs
crates/goosetower/src/materializer/state/: views.rs
crates/goosetower/src/protocol/: generated.rs  mod.rs
crates/goosetower/src/runtime/: client.rs  events.rs  mod.rs  provisioning.rs  sse.rs
crates/goosetower/src/runtime/client/: error.rs  mod.rs  tests.rs  types.rs
crates/goosetower/src/verification/: fake_source.rs  fake_source_epoch_tests.rs  fake_source_tests.rs  mod.rs  tower_observer.rs
crates/runtime-core/src/: lib.rs  provider.rs  runtime.rs  services.rs  state.rs  team_comms.rs
crates/runtime-provider-acp/: Cargo.toml
crates/runtime-provider-acp/src/: config.rs  connection.rs  lib.rs  protocol.rs  provider.rs  runtime_provider.rs  state.rs
crates/runtime-provider-acp/src/tests/: connection.rs  contract.rs  mod.rs  support.rs
crates/runtime-provider-claude/: Cargo.toml
crates/runtime-provider-claude/src/: auth.rs  bridge.rs  config.rs  lib.rs  paths.rs  provider.rs  runtime_provider.rs
crates/runtime-provider-claude/src/tests/: auth_tests.rs  bridge_path_tests.rs  contract_tests.rs  mod.rs
crates/runtime-provider-codex/src/: auth.rs  config.rs  lib.rs  mcp_config.rs  provider.rs  state.rs  tests.rs
crates/runtime-server/: Cargo.toml
crates/runtime-server/src/: bootstrap.rs  config.rs  http.rs  main.rs  openapi.rs
crates/runtime-server/src/http/: auth.rs  diagnostics.rs  events.rs  mcp.rs  mod.rs  processes.rs  sessions.rs  shared.rs  teams.rs  tests.rs  worktrees.rs
crates/runtime-server/src/http/tests/: claude_acp_smoke.rs  codex_runtime_smoke.rs  mcp_core.rs  mcp_policy_process.rs  process_more.rs  session_basics.rs  support.rs  team_routes.rs  worktree_create_cleanup.rs  worktree_existing_smoke.rs
crates/runtime-store-sqlite/: Cargo.toml
crates/runtime-store-sqlite/src/: db.rs  lib.rs  repository.rs  repository_bootstrap.rs  repository_hydration.rs  repository_mutations.rs  repository_upserts.rs  schema.rs  store.rs  tests.rs
crates/runtime-store-sqlite/src/tests/: bootstrap_regressions.rs
crates/runtime-tools/: Cargo.toml
crates/runtime-tools/src/: lib.rs  process.rs
crates/runtime-tools/src/gateway/: mod.rs  presets.rs  stubs.rs  team.rs  team_helpers.rs
crates/runtime-tools/src/tests/: gateway_basics.rs  mod.rs  process.rs  team_manage.rs  worktree.rs
crates/runtime-tools/src/worktree/: core.rs  mod.rs  service.rs  spawn.rs
deploy/systemd/: gg-goosetower.env.example  gg-goosetower.service.example  gg-runtime.env.example  gg-runtime.service.example
docs/: API.md  API_DOC_SYNC.md  API_ENDPOINTS.md  ARCHITECTURE.md  CONFIGURATION.md  DEPLOYMENT.md  INSTALL.md  MCP_AND_SIDECARS.md  OPERATIONS.md  PROVIDERS.md  README.md
dogfood-output/gooselake-hero/: report.md
examples/: goosetower.local.toml  goosetower.toml  runtime-server.toml
gg/: goosetower-gooseweb-implementation-plan-2026-07-06.md  gooseweb-ux-browser-audit-2026-07-07-open-leader.md  standalone-agent-runtime-implementation-plan-2026-05-05.md  standalone-agent-runtime-research-report-2026-05-05.md
gg/agent-outputs/: acp-provider-implementation-plan-2026-06-23.md  acp-provider-research-2026-06-23.md  readme-voice-and-positioning-research-2026-05-08.md  realtime-design-research.md  realtime-stack-research.md  team-mcp-parity-implementation-plan-2026-07-06.md  vps-deployment-optimization-research-2026-05-08.md
openapi/: runtime-server-openapi.yaml
scripts/: api-doc-sync.sh  check-rust-file-lines.sh  deploy-vps.sh  dev-gooseweb-stack.sh  install-from-source.sh  install-runtime.sh  package-release.sh  preflight-goosetower.sh  preflight-runtime.sh  upgrade-runtime.sh
sidecars/claude-bridge/: package.json
sidecars/gg-mcp-server/: Cargo.toml
sidecars/gg-mcp-server/src/: constants.rs  envelope.rs  gateway.rs  main.rs  schema.rs  server.rs  tool_params.rs
sidecars/gg-mcp-server/src/server/: mod.rs  tests.rs
sidecars/gg-mcp-server/tests/: mcp_stdio_integration.rs
sidecars/gg-mcp-server/tests/support/: mod.rs
src/: content.config.ts
src/components/: SiteFooter.astro  SiteHeader.astro
src/data/: docs.ts
src/layouts/: BaseLayout.astro
src/pages/: docs.md.ts  index.astro
src/scripts/: docsEnhancements.ts
src/styles/: global.css  landing.css
verification/gooseweb/: GOVERNANCE.md  README.md  manifest-registry.json
(+134 files in other folders)
