[workspace]
members = [
  "crates/runtime-core",
  "crates/runtime-store-sqlite",
  "crates/runtime-provider-codex",
  "crates/runtime-provider-claude",
  "crates/runtime-provider-acp",
  "crates/runtime-tools",
  "crates/runtime-server",
]
resolver = "2"

[workspace.package]
edition = "2021"
version = "0.1.4"
license = "Apache-2.0"
authors = ["GG Runtime Team"]

[workspace.dependencies]
anyhow = "1.0"
async-trait = "0.1"
axum = "0.8"
http = "1.3"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
tokio = { version = "1.48", features = ["macros", "rt-multi-thread", "net", "signal", "fs", "sync", "time"] }
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
