[package]
name = "goosetower"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[[bin]]
name = "gg-goosetower"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
axum.workspace = true
http.workspace = true
prost = "0.14"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
toml.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[build-dependencies]
prost-build = "0.14"
protoc-bin-vendored = "3.2"

[dev-dependencies]
tempfile = "3.23"
tower = { version = "0.5", features = ["util"] }
