[package]
name = "goosetower"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[[bin]]
name = "gg-goosetower"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
axum.workspace = true
bytes = "1.10"
futures-util = "0.3"
http.workspace = true
prost = "0.14"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
runtime-core = { path = "../runtime-core" }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
toml.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
url = "2.5"

[build-dependencies]
prost-build = "0.14"
protoc-bin-vendored = "3.2"

[dev-dependencies]
tempfile = "3.23"
tokio-stream = "0.1"
tower = { version = "0.5", features = ["util"] }
