[package]
name = "runtime-provider-claude"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
async-trait.workspace = true
runtime-core = { path = "../runtime-core" }
serde.workspace = true
serde_json.workspace = true
tokio = { workspace = true, features = ["process", "io-util", "sync", "time", "rt"] }
tracing.workspace = true

[dev-dependencies]
tempfile = "3.23"
runtime-store-sqlite = { path = "../runtime-store-sqlite" }
