[package]
name = "runtime-server"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[[bin]]
name = "gg-runtime-server"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
axum = { workspace = true, features = ["multipart"] }
http.workspace = true
rand.workspace = true
runtime-core = { path = "../runtime-core" }
runtime-provider-acp = { path = "../runtime-provider-acp" }
runtime-provider-claude = { path = "../runtime-provider-claude" }
runtime-provider-codex = { path = "../runtime-provider-codex" }
runtime-store-sqlite = { path = "../runtime-store-sqlite" }
runtime-tools = { path = "../runtime-tools" }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tokio-stream = { version = "0.1", features = ["sync"] }
toml.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[dev-dependencies]
async-trait.workspace = true
tempfile = "3.23"
tower = { version = "0.5", features = ["util"] }
