[package]
name = "runtime-store-sqlite"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
async-trait.workspace = true
rusqlite = { version = "0.32", features = ["bundled"] }
runtime-core = { path = "../runtime-core" }
rand.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true

[dev-dependencies]
tempfile = "3.23"
